# hclaws

./: .gitignore  README.md  claws.cabal  hclaws.cabal
bench/: Main.hs
doc/: ShallowWater.pd  TwoComponentChromatography.pd
src/Math/: ConservationLaws.hs  Curves.hs  Differentiation.hs  Fan.hs  Integration.hs  Integration.html  LinearAlgebra.hs
src/Math/ConservationLaws/: Examples.hs  FrontTracking.hs  Plot.hs  Separated.hs
src/Math/ConservationLaws/Examples/: Burgers.hs  JenssenYoung2004_31.hs  Linear.hs  ShallowWater.hs  TveitoWinther1995_3.hs  TwoComponentChromatography.hs
src/Math/Hclaws/: ConservationLaws.hs  Curves.hs  Differentiation.hs  Fan.hs  FrontTracking.hs  Integration.hs  LinearAlgebra.hs  Plot.hs
src/Math/Hclaws/Systems/: Burgers.hs  JenssenYoung2004_31.hs  Linear.hs  ShallowWater.hs  TveitoWinther1995_3.hs  TwoComponentChromatography.hs
test/: Main.hs
test/Test/: Curves.hs  HUnitExtras.hs
test/Tests/Math/: ConservationLaws.hs  Curves.hs  Differentiation.hs  Fan.hs  Integration.hs
test/Tests/Math/ConservationLaws/: Examples.hs  FrontTracking.hs  Separated.hs
test/Tests/Math/ConservationLaws/Examples/: Burgers.hs  JenssenYoung2004_31.hs  Linear.hs  ShallowWater.hs  TveitoWinther1995_3.hs  TwoComponentChromatography.hs
test/Tests/Math/Hclaws/: ConservationLaws.hs  Curves.hs  Differentiation.hs  Fan.hs  FrontTracking.hs  Integration.hs
test/Tests/Math/Hclaws/Systems/: Burgers.hs  JenssenYoung2004_31.hs  Linear.hs  ShallowWater.hs  TveitoWinther1995_3.hs  TwoComponentChromatography.hs
