name:                claws
version:             0.1.0.0
synopsis:            Experimenting with and solving Conservation Laws.
license:             BSD3
license-file:        LICENSE
author:              Michael Benfield
maintainer:          mike.benfield@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Math.ConservationLaws
                       Math.Integration
                       Math.Curves
                       Math.Differentiation
                       Math.Fan
                       Math.LinearAlgebra
                       Math.ConservationLaws.Plot
                       Math.ConservationLaws.FrontTracking
                       Math.ConservationLaws.Examples.Burgers
                       Math.ConservationLaws.Examples.Linear
                       Math.ConservationLaws.Examples.ShallowWater
                       Math.ConservationLaws.Examples.TveitoWinther1995_3
                       Math.ConservationLaws.Examples.TwoComponentChromatography
                       Math.ConservationLaws.Examples.JenssenYoung2004_31
  build-depends:       base >=4.7 && <4.9,
                       vector >=0.11,
                       vector-th-unbox,
                       containers,
                       containers,
                       easyplot,
                       ftensor
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedLists
                       RecordWildCards
                       BangPatterns
                       FlexibleInstances
                       TypeFamilies
                       MultiParamTypeClasses
  ghc-options:         -O2 -Wall -fno-warn-name-shadowing
                       -fno-warn-missing-signatures
                       -funbox-strict-fields

test-suite claws-test
  type: exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.9,
                       tasty >=0.10,
                       tasty-hunit >=0.9,
                       tasty-quickcheck >=0.8,
                       tasty-smallcheck >=0.8,
                       tasty-th,
                       ftensor,
                       vector,
                       containers,
                       claws
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010

benchmark claws-bench
  type: exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.9,
                       criterion,
                       vector,
                       claws
  main-is:             Main.hs
  hs-source-dirs:      bench
  default-language:    Haskell2010
