name:                hclaws
version:             0.1.0.0
synopsis:            Code for solving hyperbolic conservation laws.
license:             ISC
license-file:        LICENSE
author:              Michael Benfield
maintainer:          mike.benfield@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:
  This package contains an implementation of front tracking for conservation
  laws in one space dimension.

library
  exposed-modules:
    Math.Hclaws.ConservationLaws
    Math.Hclaws.Integration
    Math.Hclaws.Curves
    Math.Hclaws.Differentiation
    Math.Hclaws.Fan
    Math.Hclaws.LinearAlgebra
    Math.Hclaws.Plot
    Math.Hclaws.FrontTracking
    Math.Hclaws.Systems.Burgers
    Math.Hclaws.Systems.Linear
    Math.Hclaws.Systems.ShallowWater
    Math.Hclaws.Systems.TveitoWinther1995_3
    Math.Hclaws.Systems.TwoComponentChromatography
    Math.Hclaws.Systems.JenssenYoung2004_31
  build-depends:
    base >=4.7 && <4.9,
    vector >=0.11,
    vector-th-unbox,
    containers,
    easyplot,
    ftensor
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedLists
    RecordWildCards
    BangPatterns
    FlexibleInstances
    TypeFamilies
    MultiParamTypeClasses
  ghc-options:
    -O2 -Wall -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -funbox-strict-fields

test-suite hclaws-test
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.7 && <4.9,
    tasty >=0.10,
    tasty-hunit >=0.9,
    tasty-quickcheck >=0.8,
    tasty-smallcheck >=0.8,
    tasty-th,
    ftensor,
    vector,
    containers,
    hclaws
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010

benchmark hclaws-bench
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.7 && <4.9,
    criterion,
    vector,
    hclaws
  main-is:             Main.hs
  hs-source-dirs:      bench
  default-language:    Haskell2010
